--- a/assets/base.css
+++ b/assets/base.css
@@ -1271,6 +1271,8 @@ button.shopify-payment-button__button--unbranded {
     0 0 0 calc(var(--buttons-border-width) + 1px) rgba(var(--color-button), var(--alpha-button-background));
 }
 
+
+
 .button--secondary:after {
   --border-opacity: var(--buttons-border-opacity);
 }
@@ -2311,7 +2313,7 @@ input[type='checkbox'] {
 
 /* section-header */
 .section-header.shopify-section-group-header-group {
-  z-index: 3;
+  z-index: 100;
 }
 
 .shopify-section-header-sticky {
@@ -2802,12 +2804,27 @@ details[open] > .header__submenu {
 }
 
 .header__menu-item span {
+  position: relative;
   transition: text-decoration var(--duration-short) ease;
 }
 
-.header__menu-item:hover span {
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+.header__menu-item span::after {
+
+  content: '';
+  position: absolute;
+  border: none;
+  width: 0%;
+  height: 3px ;
+  bottom: 0;
+  left: 0;
+  transform: translateY(10px);
+  transition: width 1000ms cubic-bezier(0.215, 0.610, 0.355, 1);
+  background-color: rgb(var(--color-foreground));
+
+}
+
+.header__menu-item:hover span::after {
+  width: 100%; 
 }
 
 details[open] > .header__menu-item {
@@ -2823,15 +2840,26 @@ details[open] > .header__menu-item .icon-caret {
 }
 
 .header__active-menu-item {
+  position: relative;
   transition: text-decoration-thickness var(--duration-short) ease;
   color: rgb(var(--color-foreground));
-  text-decoration: underline;
-  text-underline-offset: 0.3rem;
+  /* text-underline-offset: 0.3rem; */
+} 
+
+.header__active-menu-item::after {
+  content: '';
+  position: absolute;
+  border: none;
+  width: 100% !important;
+  height: 3px ;
+  bottom: 0;
+  left: 0;
+  background-color: rgb(var(--color-foreground));
 }
 
-.header__menu-item:hover .header__active-menu-item {
+/* .header__menu-item:hover .header__active-menu-item {
   text-decoration-thickness: 0.2rem;
-}
+} */
 
 .header__submenu {
   transition: opacity var(--duration-default) ease, transform var(--duration-default) ease;
@@ -2868,7 +2896,7 @@ details[open] > .header__menu-item .icon-caret {
 }
 
 .header__submenu .header__menu-item:hover {
-  text-decoration-line: underline;
+  text-decoration-line: none;
 }
 
 .header__menu-item .icon-caret {
@@ -3625,3 +3653,17 @@ p {
   }
 }
 
+.button::after{
+  box-shadow: none !important;
+  border: none !important;
+}
+
+
+.button:hover::after{
+  box-shadow: none;
+  border: none;
+}
+
+.button:hover {
+  border: 2px solid #12372a;
+}
