--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,20 +1,6 @@
 <!doctype html>
 <html class="js" lang="{{ request.locale.iso_code }}">
- 
   <head>
-     <link rel="preload" href="https://cdn.shopify.com/s/files/1/0701/3279/3512/files/Casanova_Font_Free.ttf?v=1744198115" as="font" type="font/ttf" crossorigin="anonymous">
-    <style>
-      @font-face {
-        font-family: 'Casanova Font';
-        src: url('https://cdn.shopify.com/s/files/1/0701/3279/3512/files/Casanova_Font_Free.ttf?v=1744198115') format('truetype');
-        font-weight: normal;
-        font-style: normal;
-      }
-    
-      h1, h2, h3, h4, h5, h6 {
-        font-family: 'Casanova Font', sans-serif !important;
-      }
-    </style>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
@@ -24,10 +10,11 @@
     {%- if settings.favicon != blank -%}
       <link rel="icon" type="image/png" href="{{ settings.favicon | image_url: width: 32, height: 32 }}">
     {%- endif -%}
-
     {%- unless settings.type_header_font.system? and settings.type_body_font.system? -%}
       <link rel="preconnect" href="https://fonts.shopifycdn.com" crossorigin>
     {%- endunless -%}
+    {% if page_description %}<meta name="description" content="{{ page_description | escape }}">{% endif %}
+    {% render 'meta-tags' %}
 
     <title>
       {{ page_title }}
@@ -36,19 +23,12 @@
       {%- unless page_title contains shop.name %} &ndash; {{ shop.name }}{% endunless -%}
     </title>
 
-    {% if page_description %}
-      <meta name="description" content="{{ page_description | escape }}">
-    {% endif %}
-
-    {% render 'meta-tags' %}
-
     <script src="{{ 'constants.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'pubsub.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'global.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-disclosure.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'details-modal.js' | asset_url }}" defer="defer"></script>
     <script src="{{ 'search-form.js' | asset_url }}" defer="defer"></script>
-
     {%- if settings.animations_reveal_on_scroll -%}
       <script src="{{ 'animations.js' | asset_url }}" defer="defer"></script>
     {%- endif -%}
@@ -111,13 +91,6 @@
       {{ scheme_classes | prepend: 'body' }} {
         color: rgba(var(--color-foreground), 0.75);
         background-color: rgb(var(--color-background));
-      }
-
-      @font-face {
-        font-family: 'cassanova_serif_display';
-        src: url('{{ 'cassanova_serif_display.ttf' | asset_url }}') format('truetype');
-        font-weight: normal;
-        font-style: normal;
       }
 
       :root {
@@ -317,7 +290,7 @@
         document.documentElement.classList.add('shopify-design-mode');
       }
     </script>
-    <script src="https://cdn.jsdelivr.net/npm/@tailwindcss/browser@4" async></script>
+    <link href="{{ 'theme.css' | asset_url }}" rel="stylesheet">
   </head>
 
   <body class="gradient{% if settings.animations_hover_elements != 'none' %} animate--hover-{{ settings.animations_hover_elements }}{% endif %}">
