--- a/input.css
+++ b/input.css
@@ -24,3 +24,11 @@ h1, h2, h3, h4, h5, h6 {
 li .header-nav-link:hover {
   text-decoration: none !important;
 }
+
+select {
+  background-color: #12372a !important;
+}
+
+select > option {
+  padding: 10px;
+}
