--- a/assets/theme.css
+++ b/assets/theme.css
@@ -168,6 +168,9 @@
   .\!absolute {
     position: absolute !important;
   }
+  .absolute {
+    position: absolute;
+  }
   .fixed {
     position: fixed;
   }
@@ -249,9 +252,6 @@
   .w-\[80\%\] {
     width: 80%;
   }
-  .w-\[300px\] {
-    width: 300px;
-  }
   .w-full {
     width: 100%;
   }
@@ -284,14 +284,12 @@
   .overflow-hidden {
     overflow: hidden;
   }
+  .border {
+    border-style: var(--tw-border-style);
+    border-width: 1px;
+  }
   .\!bg-branding-yellow {
     background-color: var(--color-branding-yellow) !important;
-  }
-  .\!p-\[24px\] {
-    padding: 24px !important;
-  }
-  .p-\[24px\] {
-    padding: 24px;
   }
   .p-\[50px\] {
     padding: 50px;
@@ -310,6 +308,9 @@
   }
   .italic {
     font-style: italic;
+  }
+  .underline {
+    text-decoration-line: underline;
   }
   .opacity-0 {
     opacity: 0%;
@@ -433,6 +434,11 @@ select > option {
   syntax: "*";
   inherits: false;
   initial-value: skewY(0);
+}
+@property --tw-border-style {
+  syntax: "*";
+  inherits: false;
+  initial-value: solid;
 }
 @property --tw-shadow {
   syntax: "*";
@@ -580,6 +586,7 @@ select > option {
       --tw-rotate-z: rotateZ(0);
       --tw-skew-x: skewX(0);
       --tw-skew-y: skewY(0);
+      --tw-border-style: solid;
       --tw-shadow: 0 0 #0000;
       --tw-shadow-color: initial;
       --tw-shadow-alpha: 100%;
